# CSCD437_IndividualAssignments

./: README.md
Assignment_4/: #makefile#  Assignment 4.docx  CMakeLists.txt  makefile  problem_a  problem_b  problem_c  problem_d  readme.txt
Assignment_4/TurnIn/Code/: problem_a.c  problem_b.c  problem_c.c  problem_d.c
Assignment_5/src/: Main.java
