cmake_minimum_required(VERSION 3.6)
project(Assignment_4)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

#set(SOURCE_FILES problem_a.c problem_b.c problem_c.c problem_d.c)
add_executable(problem_a problem_a.c)
add_executable(problem_b problem_b.c)
add_executable(problem_c problem_c.c)
add_executable(problem_d problem_d.c)

